<resources>
    <string name="app_name">POI</string>
    <string name="event_by_interests">Events</string>
    <string name="events_by_user">My Events</string>
    <string name="liked_events">Liked</string>
    <string name="hello">Hello,</string>
    <string name="category_food">Food</string>
    <string name="category_nature">Nature</string>
    <string name="wheather">Wheather</string>
    <string name="when_come">When to come</string>
    <string name="dress_code">Dress Code</string>
    <string name="ramadan">Ramadan</string>
    <string name="alcohol">Alcohol</string>
    <string name="prices">Prices</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="event_details">event details</string>
    <string name="title_activity_maps">Map</string>
    <string name="first_p"></string>
    <string name="map_location_title">Jumeirah Beach Hotel</string>
    <string name="map_location_title2">Burj Al Arab</string>
    <string name="GoogleMapsBottomSheetBehavior">com.benezra.nir.poi.GoogleMapsBottomSheetBehavior</string>
    <string name="BackDropBottomSheetBehavior">com.benezra.nir.poi.BackdropBottomSheetBehavior</string>
    <string name="empty_view">empty view</string>
    <string name="navigate_button">Navigate Now</string>
    <string name="facebook_share_button">Share on Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_dialog">Show dialog</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="login_label">Login</string>
    <string name="success_login_msg">Login successful</string>
    <string name="error_login_msg">Please fill any empty fields</string>
    <string name="all_day">All-day</string>
    <string name="not_repeat">Does not repeat</string>
    <string name="retry">RETRY</string>
    <string name="leave">LEAVE</string>
    <string name="no_network_title">No Network Found</string>
    <string name="no_network_message">No Network Found</string>
    <string name="loading_data_title">Loading Data</string>
    <string name="loading">Loading</string>
    <string name="please_wait_message">Please wait...</string>
    <string name="retrieving_data_title">Retrieving Data</string>
    <string name="retrieving_data_message">failed retrieve data from the server</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="year">Year:</string>
    <string name="category">Category:</string>
    <string name="description">Description:</string>
    <string name="imageurl">ImageUrl:</string>
    <string name="promourl">PromoUrl:</string>
    <string name="rate">Rate:</string>
    <string name="hour">Hour:</string>
    <string name="missing_location">Please tell us the location of the event</string>
    <string name="missing_interest">Please fill the theme of the event</string>
    <string name="missing_details">Please give us details about the event</string>
    <string name="missing_title">Please add a tittle to the event</string>
    <string name="collapsingtoolbar_title">Click to add title...</string>
    <string name="no_image_title">No image</string>
    <string name="unsave_saved">Unsaved changes</string>
    <string name="sure">Sure</string>
    <string name="return_to_event">Return</string>
    <string name="discard_event">Event haven\'t saved, are you sure you want to leave?</string>
    <string name="no_image_message">No image add, are you sure you want to continue?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_event_title">Delete</string>
    <string name="delete_event_message">Are you sure you want to delte the event?</string>
    <string name="no_permission_title">No location permission</string>
    <string name="no_permission_message">The system will not be able to work without location services approval</string>
    <string name="updating_event">Updating event</string>
    <string name="creating_event">Creating event</string>
    <string name="delete_event">Deleting event</string>
    <string name="please_wait">Please wait...</string>
    <string name="event_created">Event created successfully</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="join">Join</string>
    <string name="add_image">Add image</string>
    <string name="chat">Chat</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>
    <string name="slide2_heading">Key Elements</string>
    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>
    <string name="slide3_heading">Github and Guide</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>
    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_button_welcomedialog">Show Welcome</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Event</string>
    <string name="action_logout">Log out</string>
    <string name="action_fake">Fake data</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
</resources>