<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_add_event"
            android:icon="@drawable/ic_add_circle_outline_white_24dp"
            android:title="@string/action_add" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_add_interest"
            android:icon="@drawable/ic_email_white_18dp"
            android:title="@string/add_interest" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_local_library_white_24dp"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/action_share" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_description_white_24dp"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/action_logout" />
        <item
            android:id="@+id/fake_data"
            android:icon="@drawable/ic_clear_white_36dp"
            android:title="@string/action_fake" />

    </group>

</menu>
