<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.benezra.nir.poi.Login.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/animation_list"
        android:id="@+id/scrollview"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/main_icon" />

            <EditText
                android:id="@+id/email"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_login_focuse"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@drawable/edittext_hint" />


            <EditText
                android:id="@+id/password"
                style="@android:style/Widget.Button"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_login_focuse"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@drawable/edittext_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_login"
                android:text="@string/btn_login"
                android:textColor="@color/white_50_alpha" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <!-- Link to Login Screen -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.45"
                    android:background="@color/white_50_alpha" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0.1"
                    android:paddingTop="10dp"
                    android:text="OR"
                    android:textAlignment="center"
                    android:textColor="@color/white_50_alpha" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.45"
                    android:background="@color/white_50_alpha" />

            </LinearLayout>

            <fragment
                android:id="@+id/fragment"
                android:name="com.benezra.nir.poi.Fragment.GoogleSignInFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <fragment
                android:id="@+id/fragment2"
                android:name="com.benezra.nir.poi.Fragment.FacebookLoginFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
